[gd_scene load_steps=38 format=3 uid="uid://c8neaqrqvaukl"]

[ext_resource type="Script" path="res://scripts/camera_main.gd" id="1_iigr3"]
[ext_resource type="Shader" path="res://shaders/floor_basic.gdshader" id="1_l05ut"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_wlc6o"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_ic4wo"]
[ext_resource type="Shader" path="res://shaders/cat_flesh.gdshader" id="4_dl8rv"]
[ext_resource type="Shader" path="res://shaders/tail.gdshader" id="4_s462a"]
[ext_resource type="Shader" path="res://shaders/cat_ear.gdshader" id="5_xxnyg"]
[ext_resource type="Script" path="res://scripts/first_gui.gd" id="8_kcfuf"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_if07h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5bch6"]
render_priority = 0
shader = ExtResource("1_l05ut")
shader_parameter/test = null
shader_parameter/points = null

[sub_resource type="PlaneMesh" id="PlaneMesh_sqcpk"]
material = SubResource("ShaderMaterial_5bch6")
size = Vector2(100, 100)
subdivide_width = 43
subdivide_depth = 43

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7guq"]
render_priority = 0
shader = ExtResource("4_dl8rv")

[sub_resource type="BoxMesh" id="BoxMesh_0pyk2"]
material = SubResource("ShaderMaterial_m7guq")
size = Vector3(1.2, 0.8, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fa1ba"]
render_priority = 0
shader = ExtResource("4_dl8rv")

[sub_resource type="CylinderMesh" id="CylinderMesh_v8rmg"]
material = SubResource("ShaderMaterial_fa1ba")
top_radius = 0.2
bottom_radius = 0.2
height = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_irove"]
render_priority = 0
shader = ExtResource("4_dl8rv")

[sub_resource type="SphereMesh" id="SphereMesh_f8e0e"]
material = SubResource("ShaderMaterial_irove")
radius = 0.4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cn74w"]
render_priority = 0
shader = ExtResource("5_xxnyg")

[sub_resource type="PrismMesh" id="PrismMesh_5krpv"]
material = SubResource("ShaderMaterial_cn74w")
size = Vector3(1, 1, 0.2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cswwj"]
render_priority = 0
shader = ExtResource("4_s462a")

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_eb1oc"]
material = SubResource("ShaderMaterial_cswwj")
radius = 0.1
sections = 9

[sub_resource type="BoxShape3D" id="BoxShape3D_6hrnx"]
size = Vector3(1, 1, 1.1458)

[sub_resource type="Gradient" id="Gradient_1imuk"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.819372)
colors = PackedColorArray(0.231373, 0, 0, 1, 0, 0.129412, 0.431373, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_d381n"]
noise_type = 3
frequency = 0.028
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wx0w1"]
width = 1000
height = 500
color_ramp = SubResource("Gradient_1imuk")
noise = SubResource("FastNoiseLite_d381n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_88vma"]
texture = SubResource("NoiseTexture2D_wx0w1")
region_rect = Rect2(0, 0, 512, 512)

[sub_resource type="Gradient" id="Gradient_1euc3"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mncy0"]
seed = 5
fractal_type = 2
fractal_gain = 0.4
fractal_weighted_strength = 0.11

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ku8li"]
width = 500
height = 500
color_ramp = SubResource("Gradient_1euc3")
noise = SubResource("FastNoiseLite_mncy0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5gjea"]
texture = SubResource("NoiseTexture2D_ku8li")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 512, 512)

[sub_resource type="Theme" id="Theme_m8si7"]
Label/colors/font_color = Color(1, 0, 1, 1)
Label/colors/font_shadow_color = Color(0.376471, 0.592157, 0.784314, 0.729412)
Label/styles/normal = SubResource("StyleBoxTexture_88vma")
ProgressBar/styles/fill = SubResource("StyleBoxTexture_5gjea")

[sub_resource type="Gradient" id="Gradient_svn2e"]
colors = PackedColorArray(0, 0, 0, 1, 0.278431, 0.258824, 0.733333, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_k40p5"]
noise_type = 2
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nr5bo"]
width = 2000
height = 2000
seamless = true
color_ramp = SubResource("Gradient_svn2e")
noise = SubResource("FastNoiseLite_k40p5")

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_bnnyx"]
panorama = SubResource("NoiseTexture2D_nr5bo")
filter = false

[sub_resource type="Sky" id="Sky_s7ve2"]
sky_material = SubResource("PanoramaSkyMaterial_bnnyx")

[sub_resource type="Environment" id="Environment_6wt6d"]
background_mode = 2
sky = SubResource("Sky_s7ve2")
volumetric_fog_density = 0.0383
volumetric_fog_albedo = Color(0, 0.839216, 0.639216, 1)
volumetric_fog_anisotropy = 0.05
volumetric_fog_ambient_inject = 1.26
volumetric_fog_sky_affect = 0.0

[node name="Main" type="Node3D"]
script = ExtResource("1_wlc6o")

[node name="camera_main" type="Node3D" parent="."]
script = ExtResource("1_iigr3")

[node name="top_cam" type="Camera3D" parent="camera_main"]
transform = Transform3D(1, 0, 0, 0, 0.866897, 0.498488, 0, -0.498488, 0.866897, 0, 4.3, 4)

[node name="envr_main" type="Node3D" parent="."]

[node name="floor" type="StaticBody3D" parent="envr_main"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="envr_main/floor"]
shape = SubResource("WorldBoundaryShape3D_if07h")

[node name="floor_vis" type="MeshInstance3D" parent="envr_main/floor"]
mesh = SubResource("PlaneMesh_sqcpk")
skeleton = NodePath("../..")

[node name="player_main" type="Node3D" parent="."]

[node name="player" type="CharacterBody3D" parent="player_main"]
script = ExtResource("2_ic4wo")

[node name="body_ag" type="Node3D" parent="player_main/player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="body" type="MeshInstance3D" parent="player_main/player/body_ag"]
mesh = SubResource("BoxMesh_0pyk2")
skeleton = NodePath("../..")

[node name="back_right" type="MeshInstance3D" parent="player_main/player/body_ag"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, -0.8, 0.638)
mesh = SubResource("CylinderMesh_v8rmg")

[node name="back_left" type="MeshInstance3D" parent="player_main/player/body_ag"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, -0.8, 0.638)
mesh = SubResource("CylinderMesh_v8rmg")

[node name="front_right" type="MeshInstance3D" parent="player_main/player/body_ag"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, -0.8, -0.638)
mesh = SubResource("CylinderMesh_v8rmg")

[node name="front_left" type="MeshInstance3D" parent="player_main/player/body_ag"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.598076, -0.8, -0.634003)
mesh = SubResource("CylinderMesh_v8rmg")

[node name="head" type="MeshInstance3D" parent="player_main/player/body_ag"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000827312, -1.19209e-07, -1.34592)
mesh = SubResource("SphereMesh_f8e0e")

[node name="right_ear" type="MeshInstance3D" parent="player_main/player/body_ag/head"]
transform = Transform3D(0.220474, 0.203448, 0, -0.203448, 0.220474, 0, 0, 0, 0.3, 0.398145, 0.492472, 0)
mesh = SubResource("PrismMesh_5krpv")

[node name="left_ear" type="MeshInstance3D" parent="player_main/player/body_ag/head"]
transform = Transform3D(0.220474, -0.203448, 0, 0.203448, 0.220474, 0, 0, 0, 0.3, -0.395293, 0.492, -9.05991e-05)
mesh = SubResource("PrismMesh_5krpv")

[node name="tail" type="MeshInstance3D" parent="player_main/player/body_ag"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.243065, 1.8)
mesh = SubResource("TubeTrailMesh_eb1oc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_main/player"]
transform = Transform3D(1.49829, 0, 0, 0, 1.87596, 0, 0, 0, 2.24848, 0, 1.03992, -0.286913)
shape = SubResource("BoxShape3D_6hrnx")

[node name="light_main" type="Node3D" parent="."]

[node name="light_side" type="DirectionalLight3D" parent="light_main"]
transform = Transform3D(0.869495, -0.15673, -0.468417, 0, -0.948324, 0.317305, -0.493942, -0.275895, -0.824563, -74.1428, 31.849, -91.2583)
light_energy = 2.5
light_indirect_energy = 2.277
shadow_enabled = true

[node name="gui0" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme = SubResource("Theme_m8si7")
script = ExtResource("8_kcfuf")

[node name="my_Bar" type="ProgressBar" parent="gui0"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -326.0
offset_top = -43.0
grow_horizontal = 0
grow_vertical = 0

[node name="my_thing" type="Label" parent="gui0"]
layout_mode = 0
offset_left = -263.0
offset_top = -539.0
offset_right = -8.0
offset_bottom = -476.0
text = "How About this?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dist_bar" type="ProgressBar" parent="gui0"]
layout_mode = 0
offset_left = -1099.0
offset_top = -594.0
offset_right = -563.0
offset_bottom = -556.0

[node name="Node" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node"]
environment = SubResource("Environment_6wt6d")
